--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,24 @@
 [package]
-name = "bevy_shader_play"
+name = "bevy_magic_fx"
 version = "0.1.0"
-edition = "2021"
-default-run ="main"
+edition = "2021" 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = "0.12.1"
-bevy_obj = "0.12.1"
+bevy = "0.13"
+bevy_obj = "0.13"
 
-[[bin]]
-name = "main"
-path = "src/main.rs"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+ron = "0.8.1"
 
 
-[[bin]]
+[[example]]
+name = "basic"
+path = "examples/basic.rs"
+
+
+[[example]]
 name = "enchantment"
-path = "src/enchantment.rs"
+path = "examples/enchantment.rs"
