--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 bevy = "0.13"
 bevy_obj = "0.13"
 
+bevy_common_assets = { version = "0.10", features = ["ron", "toml"] }
+
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 ron = "0.8.1"
