--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "bevy_magic_fx"
 version = "0.1.0"
+license = "MIT"
+description = "Define mesh-based vfx in serialized files"
 edition = "2021" 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
