--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,5 @@ path = "examples/basic.rs"
 
 
 [[example]]
-name = "enchantment"
-path = "examples/enchantment.rs"
+name = "waterfall"
+path = "examples/waterfall.rs"
