--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_magic_fx"
-version = "0.3.1"
+version = "0.3.2"
 license = "MIT"
 description = "Define mesh-based vfx in serialized files"
 edition = "2021" 
@@ -8,7 +8,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = "0.13"
+bevy = { version = "0.13.2", features = ["tga"] }
 bevy_obj = "0.13"
 
 bevy_common_assets = { version = "0.10", features = ["ron", "toml"] }
@@ -26,3 +26,7 @@ path = "examples/basic.rs"
 [[example]]
 name = "waterfall"
 path = "examples/waterfall.rs"
+
+[[example]]
+name = "showcase"
+path = "examples/showcase.rs"
