--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_magic_fx"
-version = "0.3.7"
+version = "0.13.1"
 license = "MIT"
 description = "Define mesh-based vfx in serialized files"
 edition = "2021" 
@@ -16,6 +16,7 @@ bevy_common_assets = { version = "0.10", features = ["ron", "toml"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 ron = "0.8.1"
+bevy_shader_utils = "0.7.0"
 
 
 [[example]]
