--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.13.2", features = ["tga"] }
-bevy_obj = "0.13"
+bevy = { version = "0.14.0", features = ["tga"] }
+bevy_obj = "0.14"
 
-bevy_common_assets = { version = "0.10", features = ["ron", "toml"] }
+bevy_common_assets = { version = "0.11", features = ["ron", "toml"] }
 
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 ron = "0.8.1"
-bevy_shader_utils = "0.7.0"
+# bevy_shader_utils = "0.7.0"
 
 
 [[example]]
