--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_magic_fx"
-version = "0.14.3"
+version = "0.15.0"
 license = "MIT"
 description = "Define mesh-based vfx in serialized files"
 edition = "2021" 
@@ -8,8 +8,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.14.0", features = ["tga"] }
-bevy_obj = "0.14"
+bevy = { version = "0.15.0-rc.2", features = ["tga"] }
+bevy_obj = "0.15"
 
 bevy_common_assets = { version = "0.11", features = ["ron", "toml"] }
 
