--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.15.0-rc.2", features = ["tga"] }
+bevy = { version = "0.15.0", features = ["tga"] }
 bevy_obj = "0.15"
 
-bevy_common_assets = { version = "0.11", features = ["ron", "toml"] }
+bevy_common_assets = { version = "0.12", features = ["ron", "toml"] }
 
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
