--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ bevy_common_assets = { version = "0.12", features = ["ron", "toml"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 ron = "0.8.1"
+bevy_mod_lookat = "0.1.0"
 # bevy_shader_utils = "0.7.0"
 
 
