--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,18 @@
 [package]
 name = "bevy_magic_fx"
-version = "0.15.5"
-rust-version = "1.81"
+version = "0.16.0"
+ 
 license = "MIT"
 description = "Define mesh-based vfx in serialized files"
-edition = "2021" 
+edition = "2024" 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.15.0", features = ["tga"] }
+
+bevy = { version = "0.16.0-rc.2", features=["tga","png"] }
+
+# bevy = { version = "0.15.0", features = ["tga"] }
 bevy_obj = {version = "0.15" , features =["mesh"], default-features= false }
  
 bevy_common_assets = { version = "0.12", features = ["ron", "toml"] }
