--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 ron = "0.8.1"
  
- 
+ bevy_materialize = "0.4"
 # bevy_shader_utils = "0.7.0"
 
 
