--- a/assets/materialize_defs/portal_1.material.toml
+++ b/assets/materialize_defs/portal_1.material.toml
@@ -2,19 +2,17 @@ type = "MagicFxMaterial"
 
 [material.base]  
 base_color = { LinearRgba = [0.2, 0.3, 0.2, 0.8] }
-emissive= [4.0,0.3,70.0,3.6]   
+emissive= [33.0,0.3,33.0,3.6]   
 double_sided= true
-alpha_mode=  "Blend" 
                        
 
 
 
 [material.extension]
-base_color_texture = "../textures/fx_fireskill/Gradient_Beam_007.tga"
+base_color_texture = "../textures/fx_fireskill/NoiseElectro01b.png"
 
 [material.extension.custom_uniforms]
-distortion_speed = [0.02,0.01]
 scroll_repeats = [1.0,1.0]
-scroll_speed = [1.5, 0.2]
-distortion_amount = 0.02  
-fresnel_power = 2.0
+scroll_speed = [0.8,0.2]
+distortion_amount = 0.07
+distortion_speed = [0.04,0.04]
