--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_magic_fx"
-version = "0.15.8"
+version = "0.15.9"
 rust-version = "1.81"
 license = "MIT"
 description = "Define mesh-based vfx in serialized files"
@@ -18,7 +18,8 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 ron = "0.8.1"
  
- bevy_materialize = "0.4.2"
+bevy_materialize = {version="0.4.2", features=[ "toml" ],   default-features = false  }
+
 # bevy_shader_utils = "0.7.0"
 
 
